--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -9,5 +9,13 @@
     <ClCompile Include="Source\Main.cpp">
       <Filter>Core</Filter>
     </ClCompile>
+    <ClCompile Include="Application.cpp">
+      <Filter>Core</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Application.h">
+      <Filter>Core</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
