--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -59,6 +59,7 @@
     </ClCompile>
     <ClCompile Include="source\editor.cpp" />
     <ClCompile Include="source\window.cpp" />
+    <ClCompile Include="source\graphics.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\application.h">
@@ -106,5 +107,6 @@
     <ClInclude Include="source\editor.h" />
     <ClInclude Include="source\window.h" />
     <ClInclude Include="source\common.h" />
+    <ClInclude Include="source\graphics.h" />
   </ItemGroup>
 </Project>
