--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -60,6 +60,7 @@
     <ClCompile Include="source\editor.cpp" />
     <ClCompile Include="source\window.cpp" />
     <ClCompile Include="source\graphics.cpp" />
+    <ClCompile Include="source\shader.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\application.h">
@@ -108,5 +109,6 @@
     <ClInclude Include="source\window.h" />
     <ClInclude Include="source\common.h" />
     <ClInclude Include="source\graphics.h" />
+    <ClInclude Include="source\shader.h" />
   </ItemGroup>
 </Project>
