--- a/imgui.ini
+++ b/imgui.ini
@@ -1,10 +1,21 @@
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
+Size=600,400
+Collapsed=0
+
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=165,194
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
 [Window][glung]
-Pos=133,68
-Size=311,238
+Pos=161,129
+Size=334,160
 Collapsed=0
+DockId=0x00000001,0
+
+[Docking][Data]
+DockNode  ID=0x00000001 Pos=362,359 Size=334,160
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=201,230 Size=600,400 CentralNode=1 Selected=0x5671AF88
 
