--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=600,400
+Size=782,400
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,12 +10,11 @@ Size=400,400
 Collapsed=0
 
 [Window][glung]
-Pos=161,129
-Size=334,160
+Pos=0,0
+Size=782,400
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x8B93E3BD,0
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=362,359 Size=334,160
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=201,230 Size=600,400 CentralNode=1 Selected=0x5671AF88
+DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,70 Size=782,400 CentralNode=1 Selected=0x5671AF88
 
