--- a/imgui.ini
+++ b/imgui.ini
@@ -1,20 +1,21 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=782,400
+Size=1000,800
 Collapsed=0
 
 [Window][Debug##Default]
-ViewportPos=165,194
-ViewportId=0x9F5F46A1
+Pos=133,133
 Size=400,400
 Collapsed=0
 
 [Window][glung]
 Pos=0,0
-Size=782,400
+Size=465,800
 Collapsed=0
-DockId=0x8B93E3BD,0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace ID=0x8B93E3BD Window=0xA787BDB4 Pos=41,70 Size=782,400 CentralNode=1 Selected=0x5671AF88
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,198 Size=1000,800 Split=X
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1
 
