--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=1000,800
+Pos=0,21
+Size=1000,779
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,13 +9,31 @@ Size=400,400
 Collapsed=0
 
 [Window][glung]
-Pos=0,0
-Size=465,800
+Pos=0,22
+Size=465,778
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][ glung]
+Pos=60,60
+Size=359,480
+Collapsed=0
+
+[Window][ Glung]
+Pos=107,63
+Size=134,206
+Collapsed=0
+
+[Window][ Glung]
+Pos=0,21
+Size=555,779
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,198 Size=1000,800 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,219 Size=1000,779 Split=X
+  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=555,779 Selected=0xB2CACBA7
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=443,779 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=465,800 Selected=0x5671AF88
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=533,800 CentralNode=1
 
