cleaned up editor

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
-Pos=0,21
-Size=1000,779
+Pos=0,23
+Size=1000,777
 Collapsed=0
 
 [Window][Debug##Default]
@@ -25,15 +25,12 @@ Size=134,206
 Collapsed=0
 
 [Window][ Glung]
-Pos=0,21
-Size=555,779
+Pos=395,86
+Size=328,661
 Collapsed=0
-DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,219 Size=1000,779 Split=X
-  DockNode    ID=0x00000003 Parent=0x8B93E3BD SizeRef=555,779 Selected=0xB2CACBA7
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=443,779 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=465,800 Selected=0x5671AF88
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=533,800 CentralNode=1
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=233,285 Size=1000,777 Split=X
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1 Selected=0xB2CACBA7
 
