--- a/imgui.ini
+++ b/imgui.ini
@@ -26,14 +26,12 @@ Collapsed=0
 
 [Window][ Glung]
 Pos=0,21
-Size=1000,384
+Size=1000,779
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,155 Size=1000,779 Split=X
-  DockNode    ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
-  DockNode    ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 Split=Y Selected=0xB2CACBA7
-    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1000,384 Selected=0xB2CACBA7
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=1000,393 CentralNode=1
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=105,155 Size=1000,779 Split=X
+  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1 Selected=0xB2CACBA7
 
