--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="libraries\includes\imGui\imgui_widgets.cpp" />
     <ClCompile Include="source\application.cpp" />
     <ClCompile Include="source\editor.cpp" />
+    <ClCompile Include="source\editor_window.cpp" />
     <ClCompile Include="source\graphics.cpp" />
     <ClCompile Include="source\input.cpp" />
     <ClCompile Include="source\log.cpp" />
@@ -60,6 +61,7 @@
     <ClInclude Include="source\editor.h" />
     <ClInclude Include="source\common.h" />
     <ClInclude Include="source\editor_icons.h" />
+    <ClInclude Include="source\editor_window.h" />
     <ClInclude Include="source\graphics.h" />
     <ClInclude Include="source\input.h" />
     <ClInclude Include="source\log.h" />
