--- a/imgui.ini
+++ b/imgui.ini
@@ -30,8 +30,18 @@ Size=1000,779
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][### Glungo]
+Pos=175,122
+Size=285,194
+Collapsed=0
+
+[Window][###Glungo]
+Pos=143,127
+Size=483,327
+Collapsed=0
+
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=233,283 Size=1000,779 Split=X
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,219 Size=1000,779 Split=X
   DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
   DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1 Selected=0xB2CACBA7
 
