window closing and reopening works

--- a/imgui.ini
+++ b/imgui.ini
@@ -28,7 +28,7 @@ Collapsed=0
 Pos=0,21
 Size=1000,779
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][### Glungo]
 Pos=175,122
@@ -36,12 +36,15 @@ Size=285,194
 Collapsed=0
 
 [Window][###Glungo]
-Pos=143,127
-Size=483,327
+ViewportPos=438,403
+ViewportId=0x735F7BC9
+Size=1000,779
 Collapsed=0
+DockId=0x00000003,0
 
 [Docking][Data]
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=169,219 Size=1000,779 Split=X
+DockNode    ID=0x00000003 Pos=438,403 Size=1000,779
+DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=265,315 Size=1000,779 Split=X
   DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1 Selected=0xB2CACBA7
+  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1 Selected=0x2E084078
 
