--- a/imgui.ini
+++ b/imgui.ini
@@ -28,7 +28,7 @@ Collapsed=0
 Pos=0,21
 Size=1000,779
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
 
 [Window][### Glungo]
 Pos=175,122
@@ -36,15 +36,40 @@ Size=285,194
 Collapsed=0
 
 [Window][###Glungo]
-ViewportPos=438,403
-ViewportId=0x735F7BC9
-Size=1000,779
+Pos=419,21
+Size=581,779
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
+
+[Window][###Root]
+Pos=569,93
+Size=200,200
+Collapsed=0
+
+[Window][###]
+Pos=60,60
+Size=320,264
+Collapsed=0
+
+[Window][###fingus]
+Pos=60,60
+Size=180,215
+Collapsed=0
+
+[Window][###12wa]
+Pos=60,60
+Size=32,37
+Collapsed=0
+
+[Window][###foink]
+Pos=60,60
+Size=299,278
+Collapsed=0
 
 [Docking][Data]
-DockNode    ID=0x00000003 Pos=438,403 Size=1000,779
-DockSpace   ID=0x8B93E3BD Window=0xA787BDB4 Pos=265,315 Size=1000,779 Split=X
-  DockNode  ID=0x00000001 Parent=0x8B93E3BD SizeRef=465,800 Selected=0x5671AF88
-  DockNode  ID=0x00000002 Parent=0x8B93E3BD SizeRef=533,800 CentralNode=1 Selected=0x2E084078
+DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=138,182 Size=1000,779 Split=X
+  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=417,779 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=465,800 Selected=0x5671AF88
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=533,800 CentralNode=1 Selected=0x2E084078
+  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=581,779 Selected=0x2E084078
 
