--- a/imgui.ini
+++ b/imgui.ini
@@ -42,13 +42,14 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][###Root]
-Pos=569,93
-Size=200,200
+Pos=0,21
+Size=1000,779
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][###]
-Pos=60,60
-Size=320,264
+Pos=284,213
+Size=400,264
 Collapsed=0
 
 [Window][###fingus]
@@ -66,10 +67,32 @@ Pos=60,60
 Size=299,278
 Collapsed=0
 
+[Window][###Tree]
+Pos=0,584
+Size=1000,216
+Collapsed=0
+DockId=0x0000000A,0
+
+[Window][###Bears]
+Pos=675,21
+Size=325,561
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][###Feeps]
+Pos=289,21
+Size=384,561
+Collapsed=0
+DockId=0x00000002,0
+
 [Docking][Data]
-DockSpace     ID=0x8B93E3BD Window=0xA787BDB4 Pos=138,182 Size=1000,779 Split=X
-  DockNode    ID=0x00000004 Parent=0x8B93E3BD SizeRef=417,779 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=465,800 Selected=0x5671AF88
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=533,800 CentralNode=1 Selected=0x2E084078
-  DockNode    ID=0x00000005 Parent=0x8B93E3BD SizeRef=581,779 Selected=0x2E084078
+DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=190,234 Size=1000,779 Split=Y
+  DockNode        ID=0x00000009 Parent=0x8B93E3BD SizeRef=1000,561 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=673,779 Split=X
+      DockNode    ID=0x00000004 Parent=0x00000007 SizeRef=417,779 Split=X
+        DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=465,800 Selected=0x5671AF88
+        DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=533,800 CentralNode=1 Selected=0x5C60B5FC
+      DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=581,779 Selected=0x2E084078
+    DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=325,779 Selected=0xBADAB2FC
+  DockNode        ID=0x0000000A Parent=0x8B93E3BD SizeRef=1000,216 Selected=0x601DDC21
 
