--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -30,23 +30,20 @@
     <ClCompile Include="libraries\includes\imGui\imgui_widgets.cpp" />
     <ClCompile Include="source\application.cpp" />
     <ClCompile Include="source\editor.cpp" />
-    <ClCompile Include="Source\editor_icons.cpp" />
-    <ClCompile Include="Source\editor_icons_all.cpp" />
+    <ClCompile Include="source\editor_icons.cpp" />
+    <ClCompile Include="source\editor_icons_all.cpp" />
     <ClCompile Include="source\editor_window.cpp" />
     <ClCompile Include="source\graphics.cpp" />
     <ClCompile Include="source\input.cpp" />
     <ClCompile Include="source\log.cpp" />
-    <ClCompile Include="source\main.cpp" />
-    <ClCompile Include="source\precompiled.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
+    <ClCompile Include="source\Main.cpp" />
+    <ClCompile Include="source\precompiled.cpp" />
     <ClCompile Include="source\shader.cpp" />
     <ClCompile Include="source\stubs\stub.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="Source\text.cpp" />
+    <ClCompile Include="source\text.cpp" />
     <ClCompile Include="source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -61,10 +58,10 @@
     <ClInclude Include="libraries\includes\imGui\imstb_textedit.h" />
     <ClInclude Include="libraries\includes\imGui\imstb_truetype.h" />
     <ClInclude Include="source\application.h" />
-    <ClInclude Include="source\editor.h" />
     <ClInclude Include="source\common.h" />
+    <ClInclude Include="source\editor.h" />
     <ClInclude Include="source\editor_icons.h" />
-    <ClInclude Include="Source\editor_icons_all.h" />
+    <ClInclude Include="source\editor_icons_all.h" />
     <ClInclude Include="source\editor_window.h" />
     <ClInclude Include="source\graphics.h" />
     <ClInclude Include="source\input.h" />
@@ -72,7 +69,7 @@
     <ClInclude Include="source\precompiled.h" />
     <ClInclude Include="source\shader.h" />
     <ClInclude Include="source\stubs\stub.h" />
-    <ClInclude Include="Source\text.h" />
+    <ClInclude Include="source\text.h" />
     <ClInclude Include="source\window.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
