--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -59,6 +59,7 @@
     <ClInclude Include="libraries\includes\imGui\imstb_truetype.h" />
     <ClInclude Include="source\application.h" />
     <ClInclude Include="source\common.h" />
+    <ClInclude Include="source\context.h" />
     <ClInclude Include="source\editor.h" />
     <ClInclude Include="source\editor_icons.h" />
     <ClInclude Include="source\editor_icons_all.h" />
