--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -110,5 +110,6 @@
     <ClInclude Include="source\text.h" />
     <ClInclude Include="source\window.h" />
     <ClInclude Include="source\context.h" />
+    <ClInclude Include="source\error.h" />
   </ItemGroup>
 </Project>
