fixing capitalization of main file
the next commit will change it back to just main.cpp from main_.cpp

--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -36,7 +36,7 @@
     <ClCompile Include="source\graphics.cpp" />
     <ClCompile Include="source\input.cpp" />
     <ClCompile Include="source\log.cpp" />
-    <ClCompile Include="source\Main.cpp" />
+    <ClCompile Include="source\main_.cpp" />
     <ClCompile Include="source\precompiled.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
