--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="libraries\includes\imGui\imgui_tables.cpp" />
     <ClCompile Include="libraries\includes\imGui\imgui_widgets.cpp" />
     <ClCompile Include="source\application.cpp" />
+    <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\editor.cpp" />
     <ClCompile Include="source\editor_icons.cpp" />
     <ClCompile Include="source\editor_icons_all.cpp" />
