--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -29,6 +29,7 @@
     <ClCompile Include="libraries\includes\imGui\imgui_tables.cpp" />
     <ClCompile Include="libraries\includes\imGui\imgui_widgets.cpp" />
     <ClCompile Include="source\application.cpp" />
+    <ClCompile Include="source\camera.cpp" />
     <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\editor.cpp" />
     <ClCompile Include="source\editor_icons.cpp" />
@@ -67,6 +68,7 @@
     <ClInclude Include="libraries\includes\imGui\imstb_textedit.h" />
     <ClInclude Include="libraries\includes\imGui\imstb_truetype.h" />
     <ClInclude Include="source\application.h" />
+    <ClInclude Include="source\camera.h" />
     <ClInclude Include="source\component.h" />
     <ClInclude Include="source\context.h" />
     <ClInclude Include="source\editor.h" />
