--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -67,6 +67,7 @@
     <ClCompile Include="source\transform.cpp" />
     <ClCompile Include="source\component.cpp" />
     <ClCompile Include="source\material.cpp" />
+    <ClCompile Include="source\camera.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libraries\includes\imGui\imconfig.h">
@@ -122,5 +123,6 @@
     <ClInclude Include="source\component.h" />
     <ClInclude Include="source\transform.h" />
     <ClInclude Include="source\material.h" />
+    <ClInclude Include="source\camera.h" />
   </ItemGroup>
 </Project>
