added basic camera movement controller

--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -69,6 +69,7 @@
     <ClCompile Include="source\material.cpp" />
     <ClCompile Include="source\camera.cpp" />
     <ClCompile Include="source\spatial_component.cpp" />
+    <ClCompile Include="source\movement_controller.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libraries\includes\imGui\imconfig.h">
@@ -127,5 +128,6 @@
     <ClInclude Include="source\camera.h" />
     <ClInclude Include="source\context_ownership.h" />
     <ClInclude Include="source\spatial_component.h" />
+    <ClInclude Include="source\movement_controller.h" />
   </ItemGroup>
 </Project>
