--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -76,6 +76,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='ReleaseEditor|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="source\text.cpp" />
+    <ClCompile Include="source\texture.cpp" />
     <ClCompile Include="source\transform.cpp" />
     <ClCompile Include="source\window.cpp" />
   </ItemGroup>
@@ -114,6 +115,7 @@
     <ClInclude Include="source\spatial_component.h" />
     <ClInclude Include="source\stubs\stub.h" />
     <ClInclude Include="source\text.h" />
+    <ClInclude Include="source\texture.h" />
     <ClInclude Include="source\transform.h" />
     <ClInclude Include="source\window.h" />
   </ItemGroup>
