--- a/FieldsEngine.vcxproj.filters
+++ b/FieldsEngine.vcxproj.filters
@@ -71,6 +71,7 @@
     <ClCompile Include="source\spatial_component.cpp" />
     <ClCompile Include="source\movement_controller.cpp" />
     <ClCompile Include="source\frame_buffer.cpp" />
+    <ClCompile Include="source\texture.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="libraries\includes\imGui\imconfig.h">
@@ -131,5 +132,6 @@
     <ClInclude Include="source\spatial_component.h" />
     <ClInclude Include="source\movement_controller.h" />
     <ClInclude Include="source\frame_buffer.h" />
+    <ClInclude Include="source\texture.h" />
   </ItemGroup>
 </Project>
