--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -59,6 +59,7 @@
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\material.cpp" />
     <ClCompile Include="source\mesh.cpp" />
+    <ClCompile Include="source\mesh_resource.cpp" />
     <ClCompile Include="source\movement_controller.cpp" />
     <ClCompile Include="source\precompiled.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -108,6 +109,7 @@
     <ClInclude Include="source\log.h" />
     <ClInclude Include="source\material.h" />
     <ClInclude Include="source\mesh.h" />
+    <ClInclude Include="source\mesh_resource.h" />
     <ClInclude Include="source\movement_controller.h" />
     <ClInclude Include="source\precompiled.h" />
     <ClInclude Include="source\scene.h" />
