--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -67,6 +67,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='ReleaseEditor|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="source\resource_manager.cpp" />
     <ClCompile Include="source\scene.cpp" />
     <ClCompile Include="source\shader.cpp" />
     <ClCompile Include="source\spatial_component.cpp" />
@@ -112,6 +113,7 @@
     <ClInclude Include="source\mesh_resource.h" />
     <ClInclude Include="source\movement_controller.h" />
     <ClInclude Include="source\precompiled.h" />
+    <ClInclude Include="source\resource_manager.h" />
     <ClInclude Include="source\scene.h" />
     <ClInclude Include="source\shader.h" />
     <ClInclude Include="source\spatial_component.h" />
