--- a/FieldsEngine.vcxproj
+++ b/FieldsEngine.vcxproj
@@ -117,6 +117,7 @@
     <ClInclude Include="source\scene.h" />
     <ClInclude Include="source\shader.h" />
     <ClInclude Include="source\spatial_component.h" />
+    <ClInclude Include="source\this_type.h" />
     <ClInclude Include="source\stubs\stub.h" />
     <ClInclude Include="source\text.h" />
     <ClInclude Include="source\texture.h" />
